--- a/soti-company-website-v2/styles/main.css
+++ b/soti-company-website-v2/styles/main.css
@@ -57,11 +57,13 @@ table {
 
 
 h2 {
-  color: darkslategray ;
-  background-color: #eee;
-  padding: 20px;
-  border-bottom: 1px solid #ccc;
+  background: none;
+  color: #0074AA;
+  font-weight: bold;
+  border-bottom: none;
   font-size: 30px;
+  text-align: center;
+  padding: 35px 0;
 }
 
 p {
@@ -102,12 +104,6 @@ p {
   text-align: center;
 }
 
-.demoReqSection h2{
-  background: none;
-  color: #0074AA;
-  font-weight: bold;
-  border-bottom: none;
-}
 
 .demoReqSection #demoBtn{
   font-weight: normal;
