--- a/user-mgmt-soti2021/src/app/shared/components/menu/menu.component.html
+++ b/user-mgmt-soti2021/src/app/shared/components/menu/menu.component.html
@@ -10,6 +10,9 @@
     <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
   </li>
   <ng-content></ng-content>
